--- a/app/views/landing/contacts.html.haml
+++ b/app/views/landing/contacts.html.haml
@@ -39,8 +39,8 @@
   %p{class: "mb-3 text-xl text-stone-500 text-justify indent-8"}
     Щоб нас знайти, треба доїхати на будь-якому зручному для вас транспорті до зупинки
     %span{class: "font-black"} "Дружба".
-    Якщо їхати зі сторони 95-го кварталу або Соцгорода, то нае ательє буде трохи позаду зупинки (близько 50 метрів).
-    Якщо ви будете їхати з напрямку залізничного вокзалу, то треба перетнути дорогу на світлофорі, та повернути направо (близько 150 метрів).
+    Якщо їхати зі сторони 95-го кварталу або Соцгорода, то наше ательє буде трохи позаду зупинки (близько 50 метрів).
+    Якщо ви будете їхати з напрямку залізничного вокзалу Кривий Ріг - Головний, то вам потрібно буде перетнути дорогу на світлофорі, та повернути направо (близько 150 метрів).
   
   %div{class: "text-center my-8"}
     %h1{class: "text-xl text-stone-500 sm:text-2xl leading-normal font-extrabold tracking-tight"}
