--- a/app/views/landing/_2_services.html.haml
+++ b/app/views/landing/_2_services.html.haml
@@ -2,38 +2,86 @@
   %div{class: "py-3 sm:py-6"}
     %h1{class: "text-3xl uppercase font-messiri text-center font-bold tracking-tight font-medium text-red-500"}
       Наші послуги
-  %div{class: "grid w-full grid-cols-1 gap-6 mx-auto md:grid-cols-3"}
-    %a{class: "flex flex-col p-6 shadow-md cursor-pointer hover:shadow-lg hover:shadow-red-300", href: services_path}
-      %div{class: "hidden md:block"}
-        = image_tag("zip.png", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜")
-      %h1{class: "grow mx-auto mb-4 text-xl font-semibold leading-none tracking-tighter text-neutral-600 lg:text-2xl"}
-        Заміна замків у верхньому та легкому одягу
-      -#%p.mx-auto.text-base.leading-relaxed.text-gray-500
-      -#  Якщо у вас вийшов з ладу замок, це не означає, що речі вийшла з ладу та її потрібно викинути.
-      -#  Ми проведемо швидку його заміну, і ваш виріб прослужить ще не один день.
-      %div{class: "text-red-500 w-full flex justify-end items-end"}
-        %div{class: "pe-1 md:pe-2 w-full sm:w-2/3 border-t-2 border-red-300 text-end"}
-          Докладніше
-    %a{class: "flex flex-col p-6 shadow-md cursor-pointer hover:shadow-lg hover:shadow-red-300", href: services_path}
-      %div{class: "hidden md:block"}
-        = image_tag("djeans.png", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜")
-      %h1{class: "grow mx-auto mb-4 text-xl font-semibold leading-none tracking-tighter text-neutral-600 lg:text-2xl"}
-        Штопка (штуковка джинсових виробів)
-      -#%p.mx-auto.text-base.leading-relaxed.text-gray-500
-      -#  штуковка
-      %div{class: "text-red-500 w-full flex justify-end items-end"}
-        %div{class: "pe-1 md:pe-2 w-full sm:w-2/3 border-t-2 border-red-300 text-end"}
-          Докладніше
-    %a{class: "flex flex-col p-6 shadow-md cursor-pointer hover:shadow-lg hover:shadow-red-300", href: services_path}
-      %div{class: "hidden md:block"}
-        = image_tag("skin.png", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜")
-      %h1{class: "grow mx-auto mb-4 text-xl font-semibold leading-none tracking-tighter text-neutral-600 lg:text-2xl"}
-        Ремонт шкіряних та хутрових виробів
-      -#%p.mx-auto.text-base.leading-relaxed.text-gray-500
-      -#  Ремонт шкіряних та хутрових виробів
-      %div{class: "text-red-500 w-full flex justify-end items-end"}
-        %div{class: "pe-1 md:pe-2 w-full sm:w-2/3 border-t-2 border-red-300 text-end"}
-          Докладніше
+  %div{class: "mx-auto p-5 sm:p-10 md:p-16 lg:p-4 xl:p-2"}
+    %div{class: "grid grid-cols-1 md:grid-cols-3 sm:grid-cols-2 xs:grid-cols-1 xl:grid-cols-3 gap-10"}
+      %a{class: "rounded-xl shadow-lg hover:shadow-lg hover:shadow-red-300", href: services_path}
+        %div{class: "row relative"}
+          = image_tag("zip.png", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Заміна замків у верхньому та легкому одягу")
+          %div{class: "p-4 pt-2 h-auto md:h-70 lg:h-70 xl:h-70"}
+            %div{class: "mb-8"}
+              %h2.text-gray-900.font-bold.text-lg.mb-2.hover:text-red-500.inline-block
+                Заміна замків
+              %p.mx-auto.text-base.leading-relaxed.text-gray-500
+                Це важливий етап у догляді за вашим одягом.
+                Час від часу може знадобитися заміна зламаного або пошкодженого замка,
+                щоб ваш одяг виглядав на висоті. Цей процес може здатися складним,
+                але з допомогою професіоналів або навчавшися власноруч,
+                ви зможете продовжити використовувати улюблені речі ще довгий час.      
 
+      %a{class: "rounded-xl shadow-lg hover:shadow-lg hover:shadow-red-300", href: services_path}
+        %div{class: "row relative"}
+          = image_tag("djeans.png", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Штопка (штуковка джинсових виробів)")
+          %div{class: "p-4 pt-2 h-auto md:h-70 lg:h-70 xl:h-70"}
+            %div{class: "mb-8"}
+              %h2.text-gray-900.font-bold.text-lg.mb-2.hover:text-red-500.inline-block
+                Штуковка джинсових виробів
+              %p.mx-auto.text-base.leading-relaxed.text-gray-500
+                Це процес відновлення пошкоджених або протертих місць на джинсових речах.
+                Зазвичай це виконується шляхом закладання строчок чи патчів на пошкоджені ділянки,
+                що дозволяє джинсам виглядати як новими.
+                Штуковка джинсових виробів допомагає продовжити термін служби джинс та зберегти їх стильний вигляд.  
 
+      %a{class: "rounded-xl shadow-lg hover:shadow-lg hover:shadow-red-300", href: services_path}
+        %div{class: "row relative"}
+          = image_tag("skin.png", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Ремонт шкіряних та хутрових виробів")
+          %div{class: "p-4 pt-2 h-auto md:h-70 lg:h-70 xl:h-70"}
+            %div{class: "mb-8"}
+              %h2.text-gray-900.font-bold.text-lg.mb-2.hover:text-red-500.inline-block
+                Ремонт шкіряних та хутрових виробів
+              %p.mx-auto.text-base.leading-relaxed.text-gray-500
+                Дуже важлива процедура, яка зберігає якість та тривалість таких речей.
+                Під час ремонту фахівці здійснюють реставрацію пошкоджень,
+                змінюють застарілі деталі та повертають виробам першісний вигляд.
+                Це дозволяє продовжити термін використання шкіряних та хутрових виробів,
+                зберігаючи при цьому їх естетичний вигляд.  
+    
+      %a{class: "rounded-xl shadow-lg hover:shadow-lg hover:shadow-red-300", href: services_path}
+        %div{class: "row relative"}
+          = image_tag("niz.png", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Підгін низу (джинси, сукні, пальто та інші речі)")
+          %div{class: "p-4 pt-2 h-auto md:h-70 lg:h-70 xl:h-70"}
+            %div{class: "mb-8"}
+              %h2.text-gray-900.font-bold.text-lg.mb-2.hover:text-red-500.inline-block
+                Підгін низу
+              %p.mx-auto.text-base.leading-relaxed.text-gray-500
+                Це процес корекції довжини джинсів,
+                суконь, пальт та інших речей знизу.
+                Цей вид ремонту є дуже популярним серед людей,
+                які хочуть підігнати своє одяг під свої розміри та створити вишуканий образ.
+                Правильно підгінений низ може значно покращити зовнішній вигляд та зробити образ більш стильним і доглянутим.
 
+      %a{class: "rounded-xl shadow-lg hover:shadow-lg hover:shadow-red-300", href: services_path}
+        %div{class: "row relative"}
+          = image_tag("melkiy.png", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Дрібний ремонт одягу")
+          %div{class: "p-4 pt-2 h-auto md:h-70 lg:h-70 xl:h-70"}
+            %div{class: "mb-8"}
+              %h2.text-gray-900.font-bold.text-lg.mb-2.hover:text-red-500.inline-block
+                Дрібний ремонт одягу
+              %p.mx-auto.text-base.leading-relaxed.text-gray-500
+                Ця послуга дозволяє виправляти маленькі пошкодження на вашому одязі.
+                Це може бути зашивання ґудзиків, закріплення швів або зашивання дирок.
+                Підтримуючи одяг у належному стані, ви економите час і гроші на пошитті нового одягу,
+                а також дбаєте про навколишнє середовище, уникнувши швидкого викидання старих речей.
+
+      %a{class: "rounded-xl shadow-lg hover:shadow-lg hover:shadow-red-300", href: services_path}
+        %div{class: "row relative"}
+          = image_tag("shtory.png", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Підшивання штор")
+          %div{class: "p-4 pt-2 h-auto md:h-70 lg:h-70 xl:h-70"}
+            %div{class: "mb-8"}
+              %h2.text-gray-900.font-bold.text-lg.mb-2.hover:text-red-500.inline-block
+                Підшивання штор
+              %p.mx-auto.text-base.leading-relaxed.text-gray-500
+                Ця процедура допомагає створити естетичний вигляд приміщення,
+                а також підвищити функціональність штор,
+                дозволяючи їм краще захищати від сонячних променів або забезпечувати приватність.
+                Підшивання штор може бути важливою частиною оформлення будь-якого інтер'єру,
+                сприяючи створенню затишної та гармонійної атмосфери.
