--- a/app/views/landing/index.html.haml
+++ b/app/views/landing/index.html.haml
@@ -10,8 +10,8 @@
     = render "2_services"
     = render "3_services"
   
-  %div{class: "mt-8 wow animate__animated animate__fadeInLeft", "data-wow-duration": "2s", "data-wow-delay": ".5s", id: "prices"}
-    = render "4_prices"
+  -#%div{class: "mt-8 wow animate__animated animate__fadeInLeft", "data-wow-duration": "2s", "data-wow-delay": ".5s", id: "prices"}
+  -#  = render "4_prices"
 
   %div{class: "mt-8 wow animate__animated animate__fadeInRight", "data-wow-duration": "2s", "data-wow-delay": ".5s", id: "about"}
     = render "5_about"
