--- a/app/views/shared/_navigation.html.haml
+++ b/app/views/shared/_navigation.html.haml
@@ -12,7 +12,7 @@
     %div{class: "flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse"}
       %button{class: "text-stone-600 hover:text-red-200 inline-flex items-center mt-1 p-2 w-10 h-10 justify-center text-sm text-red-500 rounded-lg md:hidden hover:bg-stone-600 focus:outline-none focus:ring-2 focus:ring-stone-600",
                       "aria-controls": "navbar-sticky", "aria-expanded": "false",
-                      "data-collapse-toggle": "navbar-sticky", type: "button"}
+                      "data-collapse-toggle": "navbar-sticky", type: "button", "data-turbo": "false"}
         %span{class: "sr-only"} Меню
         %svg{class: "w-5 h-5", "aria-hidden": "true", fill: "none", viewbox: "0 0 17 14", xmlns: "http://www.w3.org/2000/svg"}
           %path{d: "M1 1h15M1 7h15M1 13h15", stroke: "currentColor", "stroke-linecap": "round",
