--- a/app/views/admin/services/index.html.haml
+++ b/app/views/admin/services/index.html.haml
@@ -13,6 +13,9 @@
       .mb-3
         = render Admin::FieldsetComponent.new(form, :title_full_like, :text, alignment: false, 
           label: Admin::Service.human_attribute_name(:title), placeholder: 'like %...%')
+      .mb-3
+        = render Admin::FieldsetComponent.new(form, :svc_any, :checkbox, alignment: false, 
+          label: Admin::Service.human_attribute_name(:svc), list: Admin::Service.svcs_i18n, checked_values: form.object.svc_any)
       %hr.my-3
       .row.gx-2
         .col-6.order-2.d-grid
