--- a/app/views/landing/_2_services.html.haml
+++ b/app/views/landing/_2_services.html.haml
@@ -1,17 +1,19 @@
 %section{class: "font-messiri bg-white relative items-center w-full px-5 py-12 mx-auto md:px-12 lg:px-24 max-w-7xl"}
   %div{class: "py-3 sm:py-6"}
     %h1{class: "text-3xl uppercase font-messiri text-center font-bold tracking-tight font-medium text-red-500"}
-      Наші послуги
+      Наші послуги на ремонт одягу
   %div{class: "mx-auto p-5 sm:p-10 md:p-16 lg:p-4 xl:p-2"}
-    %div{class: "grid grid-cols-1 md:grid-cols-3 sm:grid-cols-2 xs:grid-cols-1 xl:grid-cols-3 gap-10"}
+    %div{class: "grid grid-cols-1 md:grid-cols-3 sm:grid-cols-2 xs:grid-cols-1 xl:grid-cols-3 gap-5"}
       %a{class: "rounded-xl shadow-lg hover:shadow-lg hover:shadow-red-300", href: services_path}
         %div{class: "row relative"}
           = image_tag("zip.png", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Заміна замків у верхньому та легкому одягу")
           %div{class: "p-4 pt-2 h-auto md:h-70 lg:h-70 xl:h-70"}
             %div{class: "mb-8"}
-              %h2.text-gray-900.font-bold.text-lg.mb-2.hover:text-red-500.inline-block
+              %h2{class: "text-gray-900 font-bold text-lg.mb-2 hover:text-red-500 inline-block"}
                 Заміна замків
-              %p.mx-auto.text-base.leading-relaxed.text-gray-500
+              %p{class: "mx-auto text-base leading-relaxed text-red-500"}
+                від 150 грн
+              %p{class: "mx-auto text-base leading-relaxed text-stone-500"}
                 Це важливий етап у догляді за вашим одягом.
                 Час від часу може знадобитися заміна зламаного або пошкодженого замка,
                 щоб ваш одяг виглядав на висоті. Цей процес може здатися складним,
@@ -23,9 +25,11 @@
           = image_tag("djeans.png", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Штопка (штуковка джинсових виробів)")
           %div{class: "p-4 pt-2 h-auto md:h-70 lg:h-70 xl:h-70"}
             %div{class: "mb-8"}
-              %h2.text-gray-900.font-bold.text-lg.mb-2.hover:text-red-500.inline-block
+              %h2{class: "text-gray-900 font-bold text-lg.mb-2 hover:text-red-500 inline-block"}
                 Штуковка джинсових виробів
-              %p.mx-auto.text-base.leading-relaxed.text-gray-500
+              %p{class: "mx-auto text-base leading-relaxed text-red-500"}
+                від 150 грн
+              %p{class: "mx-auto text-base leading-relaxed text-stone-500"}
                 Це процес відновлення пошкоджених або протертих місць на джинсових речах.
                 Зазвичай це виконується шляхом закладання строчок чи патчів на пошкоджені ділянки,
                 що дозволяє джинсам виглядати як новими.
@@ -36,9 +40,11 @@
           = image_tag("skin.png", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Ремонт шкіряних та хутрових виробів")
           %div{class: "p-4 pt-2 h-auto md:h-70 lg:h-70 xl:h-70"}
             %div{class: "mb-8"}
-              %h2.text-gray-900.font-bold.text-lg.mb-2.hover:text-red-500.inline-block
+              %h2{class: "text-gray-900 font-bold text-lg.mb-2 hover:text-red-500 inline-block"}
                 Ремонт шкіряних та хутрових виробів
-              %p.mx-auto.text-base.leading-relaxed.text-gray-500
+              %p{class: "mx-auto text-base leading-relaxed text-red-500"}
+                від 200 грн              
+              %p{class: "mx-auto text-base leading-relaxed text-stone-500"}
                 Дуже важлива процедура, яка зберігає якість та тривалість таких речей.
                 Під час ремонту фахівці здійснюють реставрацію пошкоджень,
                 змінюють застарілі деталі та повертають виробам першісний вигляд.
@@ -50,9 +56,11 @@
           = image_tag("niz.png", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Підгін низу (джинси, сукні, пальто та інші речі)")
           %div{class: "p-4 pt-2 h-auto md:h-70 lg:h-70 xl:h-70"}
             %div{class: "mb-8"}
-              %h2.text-gray-900.font-bold.text-lg.mb-2.hover:text-red-500.inline-block
+              %h2{class: "text-gray-900 font-bold text-lg.mb-2 hover:text-red-500 inline-block"}
                 Підгін низу
-              %p.mx-auto.text-base.leading-relaxed.text-gray-500
+              %p{class: "mx-auto text-base leading-relaxed text-red-500"}
+                від 150 грн              
+              %p{class: "mx-auto text-base leading-relaxed text-stone-500"}
                 Це процес корекції довжини джинсів,
                 суконь, пальт та інших речей знизу.
                 Цей вид ремонту є дуже популярним серед людей,
@@ -64,9 +72,11 @@
           = image_tag("melkiy.png", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Дрібний ремонт одягу")
           %div{class: "p-4 pt-2 h-auto md:h-70 lg:h-70 xl:h-70"}
             %div{class: "mb-8"}
-              %h2.text-gray-900.font-bold.text-lg.mb-2.hover:text-red-500.inline-block
+              %h2{class: "text-gray-900 font-bold text-lg.mb-2 hover:text-red-500 inline-block"}
                 Дрібний ремонт одягу
-              %p.mx-auto.text-base.leading-relaxed.text-gray-500
+              %p{class: "mx-auto text-base leading-relaxed text-red-500"}
+                від 50 грн              
+              %p{class: "mx-auto text-base leading-relaxed text-stone-500"}
                 Ця послуга дозволяє виправляти маленькі пошкодження на вашому одязі.
                 Це може бути зашивання ґудзиків, закріплення швів або зашивання дирок.
                 Підтримуючи одяг у належному стані, ви економите час і гроші на пошитті нового одягу,
@@ -74,12 +84,14 @@
 
       %a{class: "rounded-xl shadow-lg hover:shadow-lg hover:shadow-red-300", href: services_path}
         %div{class: "row relative"}
-          = image_tag("shtory.png", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Підшивання штор")
+          = image_tag("melkiy.png", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Підшивання штор")
           %div{class: "p-4 pt-2 h-auto md:h-70 lg:h-70 xl:h-70"}
             %div{class: "mb-8"}
-              %h2.text-gray-900.font-bold.text-lg.mb-2.hover:text-red-500.inline-block
+              %h2{class: "text-gray-900 font-bold text-lg.mb-2 hover:text-red-500 inline-block"}
                 Підшивання штор
-              %p.mx-auto.text-base.leading-relaxed.text-gray-500
+              %p{class: "mx-auto text-base leading-relaxed text-red-500"}
+                від 200 грн              
+              %p{class: "mx-auto text-base leading-relaxed text-stone-500"}
                 Ця процедура допомагає створити естетичний вигляд приміщення,
                 а також підвищити функціональність штор,
                 дозволяючи їм краще захищати від сонячних променів або забезпечувати приватність.
