--- a/app/views/landing/_7_faq.html.haml
+++ b/app/views/landing/_7_faq.html.haml
@@ -1,4 +1,4 @@
-%section{class: "font-messiri max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex flex-col justify-between"}
+%section{class: "font-messiri bg-white max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex flex-col justify-between"}
   %div{class: "text-center"}
     %p{class: "mt-4 text-sm leading-7 text-stone-500 font-regular"}
       %span{class: "hover:text-stone-900 hover:border-b-2 hover:border-red-500"}
