--- a/app/views/landing/contacts.html.haml
+++ b/app/views/landing/contacts.html.haml
@@ -5,7 +5,7 @@
       Як нас знайти
     -#%p{class: "mt-4 text-lg text-gray-500"}
       -#Lorem ipsum dolor sit amet consectetur adipisicing elit.
-  %div{class: "text-center lg:text-left"}
+  %div{class: "text-center lg:text-left my-10"}
     %div{class: ""}
       %div{class: "flex flex-col md:flex-row"}
         %div{class: "md:w-1/2 text-center", style: "height:450px; display:inline-block; overflow:hidden;"}
