--- a/app/views/landing/index.html.haml
+++ b/app/views/landing/index.html.haml
@@ -3,12 +3,14 @@
 
 %div{class: "", id: ""}
   
-  %div{class: "wow animate__animated animate__fadeInLeft", "data-wow-duration": "2s", "data-wow-delay": ".5s", id: "hero-section"}
+  %div{class: "wow animate__animated animate__fadeInLeft", "data-wow-duration": "2s", "data-wow-delay": ".5s", id: "hero-section-1"}
     = render "1_hero_section"
   
   %div{class: "mt-8 wow animate__animated animate__fadeInRight", "data-wow-duration": "2s", "data-wow-delay": ".5s", id: "services"}
     = render "2_services"
-    = render "3_services"
+
+  %div{class: "wow animate__animated animate__fadeInLeft", "data-wow-duration": "2s", "data-wow-delay": ".5s", id: "hero-section-2"}
+    = render "3_hero_section"
   
   -#%div{class: "mt-8 wow animate__animated animate__fadeInLeft", "data-wow-duration": "2s", "data-wow-delay": ".5s", id: "prices"}
   -#  = render "4_prices"
