--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,17 +2,17 @@
 %html
   %head
     -# Google tag (gtag.js)
-    %script{async: "", "data-turbo-track" => "reload", src: "https://www.googletagmanager.com/gtag/js?id=G-B1HN94WVHN"}
+    %script{async: "true", "data-turbo-track": "reload", src: "https://www.googletagmanager.com/gtag/js?id=G-B1HN94WVHN"}
+
+    -# AnimatedCSS and WOWjs
+    %link{href: "https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css", rel: "stylesheet"}
+    %script{crossorigin: "anonymous", integrity: "sha512-Eak/29OTpb36LLo2r47IpVzPBLXnAMPAVypbSZiZ4Qkf8p/7S/XRG5xp7OKWPPYfJT6metI+IORkR5G8F900+g==", referrerpolicy: "no-referrer", src: "https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"}
 
     %title Швейна майстерня ☞ ДРУЖБА ☜
     = favicon_link_tag asset_path('favicon.png')
     %meta{content: "width=device-width, initial-scale=1.0", name: "viewport"}
     %meta{content: "text/html; charset=UTF-8", "http-equiv": "Content-Type"}
     %meta{content: "ремонт одягу пошив індивідуальний пошив ремонт одежды укоротить брюки штаны юбка платье", :name => "description"}
-
-    %link{href: "https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css", rel: "stylesheet"}
-    %script{crossorigin: "anonymous", integrity: "sha512-Eak/29OTpb36LLo2r47IpVzPBLXnAMPAVypbSZiZ4Qkf8p/7S/XRG5xp7OKWPPYfJT6metI+IORkR5G8F900+g==", referrerpolicy: "no-referrer", src: "https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"}
-
 
     -# Google fonts
     %link{href: "https://fonts.googleapis.com", rel: "preconnect"}
@@ -33,6 +33,7 @@
     = javascript_include_tag 'application', 'data-turbo-track': 'reload', defer: true
 
     -# FlowbiteJS
+    %link{href: "https://unpkg.com/flowbite@1.5.3/dist/flowbite.min.css", rel: "stylesheet"}
     %script{:src => "https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"}
   %body{class: "bg-stone-100", id: "main", "data-controller": "landing--index"}
     %navigation{class: ""}
