--- a/app/views/services/index.html.haml
+++ b/app/views/services/index.html.haml
@@ -1,9 +1,9 @@
 %section{class: "mt-8 font-messiri max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex flex-col justify-between"}
   %div{class: "text-center"}
     %h1{class: "text-3xl text-red-500 sm:text-4xl leading-normal font-extrabold tracking-tight"}
-      Раді вам запропонувати наші послуги
+      Наші послуги
 %div{class: "mx-auto p-5 sm:p-10 md:p-16"}
-  %div{class: "grid grid-cols-1 md:grid-cols-3 sm:grid-cols-2 xl:grid-cols-4 gap-10"}
+  %div{class: "grid grid-cols-1 md:grid-cols-3 sm:grid-cols-2 xl:grid-cols-4 lg:grid-cols-4 gap-10"}
     - @services.each do |service|
       %a{class: "rounded-xl shadow-lg hover:shadow-lg hover:shadow-red-300", href: service_path(service)}
         %div{class: "row"}
@@ -17,6 +17,6 @@
                 = service.title
               %p.text-gray-700.text-sm.text-ellipsis
                 = service.description
-          %div{class: "pe-2 pb-2 text-red-500 w-full flex justify-end items-end"}
-            %div{class: "pe-2 sm:pe-4 w-full sm:w-2/3 border-t-2 border-red-300 text-end"}
-              Докладніше
+          -#%div{class: "pe-2 pb-2 text-red-500 w-full flex justify-end items-end"}
+          -#  %div{class: "pe-2 sm:pe-4 w-full sm:w-2/3 border-t-2 border-red-300 text-end"}
+          -#    Докладніше
