--- a/app/views/services/show.html.haml
+++ b/app/views/services/show.html.haml
@@ -1,6 +1,6 @@
 %div{class: "container mx-auto my-4 font-messiri"}
-  %div{class: "flex flex-wrap justify-between"}
-    %div{class: "w-full.px-4 lg:w-8/12"}
+  %div{class: "flex flex-col lg:flex-row justify-between"}
+    %div{class: "px-4 w-full lg:w-8/12"}
       %sectionmx-auto{class: "p-5 sm:p-10 md:p-16 relative font-messiri"}
         - if @service.image.present?
           %div{class: "bg-cover bg-center text-center overflow-hidden", style: "min-height: 450px; background-image: url('#{url_for(@service.image)}')", title: @service.title}
@@ -16,8 +16,8 @@
               %p.text-base.leading-8.my-5
                 = @service.body
 
-    .w-full.px-4{class: "lg:w-4/12"}
-      .bg-stone-100.px-4.py-6.rounded
+    %div{class: "px-4"}
+      %div{class: "bg-stone-100 px-4 py-6 rounded"}
         %h3.text-lg.font-bold.mb-2 Наші роботи:
         %ul.list-outside
           - @service.articles.each do |article|
