--- a/app/views/admin/orders/_show_content.html.haml
+++ b/app/views/admin/orders/_show_content.html.haml
@@ -47,6 +47,12 @@
         .text-muted.fw-bold= order.class.human_attribute_name(:dead_time)
       .col-md-9
         = order.dead_time
+  .list-group-item
+    .row
+      .col-md-3
+        .text-muted.fw-bold= order.class.human_attribute_name(:description)
+      .col-md-9
+        = order.description
 .card.mb-3
   .card-header
     %h4.text-muted.mb-0= Admin::OrderDetail.model_name.human
