--- a/app/views/message_notifier_mailer/new_message_email.html.haml
+++ b/app/views/message_notifier_mailer/new_message_email.html.haml
@@ -1,4 +1,17 @@
-%h1{class: ""}
-  Нове повідомлення від #{@landing_message.name}
-%p{class: ""}
-  #{@landing_message.message}
+%div{class: "container mx-auto px-2 pt-8"}
+  %div{class: "max-w-2xl mx-auto"}
+    %h1{class: "text-2xl font-bold mb-4"}
+      Нове повідомлення
+    %div{class: "bg-white rounded-lg shadow-md border p-4"}
+      %div{class: "flex items-center mb-4"}
+        = image_tag("favicon.png", class: "w-12 h-12 rounded-full mr-3", alt: "mail image")
+        %div
+          %h2{class: "text-lg font-semibold"}
+            = @landing_message.name
+          %p{class: "text-gray-500 text-sm"}
+            = @landing_message.email
+            = @landing_message.phone
+      %p{class: "text-gray-700 mb-4"}
+        = @landing_message.message
+      %div{class: "flex justify-end"}
+        %a{clas: "text-blue-500.font-semibold", href: admin_messages_path} Перейти
