--- a/app/views/landing/_2_services.html.haml
+++ b/app/views/landing/_2_services.html.haml
@@ -9,24 +9,22 @@
           = image_tag("zip.jpg", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Заміна замків у верхньому та легкому одягу")
           %div{class: "p-4 pt-2 h-auto md:h-70 lg:h-70 xl:h-70"}
             %div{class: "mb-8"}
-              %h2{class: "text-gray-900 font-bold text-lg.mb-2 hover:text-red-500 inline-block"}
-                Заміна замків
+              %h2{class: "text-gray-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
+                Заміна замків у верхньому та легкому одягу
               %p{class: "mx-auto text-base leading-relaxed text-red-500"}
                 від 150 грн
               %p{class: "mx-auto text-base leading-relaxed text-stone-500"}
                 Це важливий етап у догляді за вашим одягом.
                 Час від часу може знадобитися заміна зламаного або пошкодженого замка,
-                щоб ваш одяг виглядав на висоті. Цей процес може здатися складним,
-                але з допомогою професіоналів або навчавшися власноруч,
-                ви зможете продовжити використовувати улюблені речі ще довгий час.      
-
+                щоб ваш одяг виглядав на висоті. Це досить складний та трудомісткий процес,
+                але з нашою допомогою, ви зможете продовжити використовувати улюблені речі ще довгий час.
       %a{class: "rounded-xl shadow-lg hover:shadow-lg hover:shadow-red-300", href: services_path}
         %div{class: "row relative"}
           = image_tag("jeans.jpg", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Штопка (штуковка джинсових виробів)")
           %div{class: "p-4 pt-2 h-auto md:h-70 lg:h-70 xl:h-70"}
             %div{class: "mb-8"}
-              %h2{class: "text-gray-900 font-bold text-lg.mb-2 hover:text-red-500 inline-block"}
-                Штуковка джинсових виробів
+              %h2{class: "text-gray-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
+                Штуковка (штопка) джинсових виробів
               %p{class: "mx-auto text-base leading-relaxed text-red-500"}
                 від 150 грн
               %p{class: "mx-auto text-base leading-relaxed text-stone-500"}
@@ -40,7 +38,7 @@
           = image_tag("skin.jpg", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Ремонт шкіряних та хутрових виробів")
           %div{class: "p-4 pt-2 h-auto md:h-70 lg:h-70 xl:h-70"}
             %div{class: "mb-8"}
-              %h2{class: "text-gray-900 font-bold text-lg.mb-2 hover:text-red-500 inline-block"}
+              %h2{class: "text-gray-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
                 Ремонт шкіряних та хутрових виробів
               %p{class: "mx-auto text-base leading-relaxed text-red-500"}
                 від 200 грн              
@@ -56,7 +54,7 @@
           = image_tag("niz.jpg", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Підгін низу (джинси, сукні, пальто та інші речі)")
           %div{class: "p-4 pt-2 h-auto md:h-70 lg:h-70 xl:h-70"}
             %div{class: "mb-8"}
-              %h2{class: "text-gray-900 font-bold text-lg.mb-2 hover:text-red-500 inline-block"}
+              %h2{class: "text-gray-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
                 Підгін низу
               %p{class: "mx-auto text-base leading-relaxed text-red-500"}
                 від 150 грн              
@@ -72,7 +70,7 @@
           = image_tag("melkiy.jpg", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Дрібний ремонт одягу")
           %div{class: "p-4 pt-2 h-auto md:h-70 lg:h-70 xl:h-70"}
             %div{class: "mb-8"}
-              %h2{class: "text-gray-900 font-bold text-lg.mb-2 hover:text-red-500 inline-block"}
+              %h2{class: "text-gray-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
                 Дрібний ремонт одягу
               %p{class: "mx-auto text-base leading-relaxed text-red-500"}
                 від 50 грн              
@@ -87,7 +85,7 @@
           = image_tag("shtory.jpg", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Підшивання штор")
           %div{class: "p-4 pt-2 h-auto md:h-70 lg:h-70 xl:h-70"}
             %div{class: "mb-8"}
-              %h2{class: "text-gray-900 font-bold text-lg.mb-2 hover:text-red-500 inline-block"}
+              %h2{class: "text-gray-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
                 Підшивання штор
               %p{class: "mx-auto text-base leading-relaxed text-red-500"}
                 від 200 грн              
