--- a/app/views/landing/_4_prices.html.haml
+++ b/app/views/landing/_4_prices.html.haml
@@ -5,18 +5,17 @@
         Більше 15 років досвіду роботи. Понад 5000 задоволених клієнтів.
       %h2{class: "text-3xl font-messiri text-center font-bold tracking-tight font-medium text-red-500"}
         Високий професіоналізм та великий рівень якості наданих послуг.
-
-      %p.mb-5.font-light.text-stone-500.sm:text-xl
+      %p{class: "mb-5 font-light text-stone-500 sm:text-xl"}
         Більше 15 років досвіду роботи. Понад 5000 задоволених клієнтів.
         Високий професіоналізм та великий рівень якості наданих послуг.
-    .space-y-8.lg:grid.lg:grid-cols-3.sm:gap-6.xl:gap-10.lg:space-y-0
-      .flex.flex-col.max-w-lg.p-6.mx-auto.text-center.text-gray-900.bg-white.border.border-gray-100.rounded-lg.shadow.dark:border-gray-600.xl:p-8.dark:bg-gray-800.dark:text-white
-        %h3.mb-4.text-2xl.font-semibold Starter
-        %p.font-light.text-gray-500.sm:text-lg.dark:text-gray-400
+    %div{class: "space-y-8 lg:grid lg:grid-cols-3 sm:gap-6 xl:gap-10 lg:space-y-0"}
+      %div{class: "flex flex-col max-w-lg p-6 mx-auto text-center text-gray-900 bg-white border border-gray-100 rounded-lg shadow"}
+        %h3{class: "mb-4 text-2xl font-semibold"} Starter
+        %p{class: "font-light text-gray-500 sm:text-lg"}
           Best option for personal use & for
           your next project.
-        .flex.items-baseline.justify-center.my-8
-          %span.mr-2.text-5xl.font-extrabold $29
+        %div{class: "flex items-baseline justify-center.my-8"}
+          %span{clss: "mr-2 text-5xl font-extrabold"} $29
           %span.text-gray-500.dark:text-gray-400 /month
         %ul.mb-8.space-y-4.text-left{:role => "list"}
           %li.flex.items-center.space-x-3
@@ -50,11 +49,11 @@
           started
       .flex.flex-col.max-w-lg.p-6.mx-auto.text-center.text-gray-900.bg-white.border.border-gray-100.rounded-lg.shadow.dark:border-gray-600.xl:p-8.dark:bg-gray-800.dark:text-white
         %h3.mb-4.text-2xl.font-semibold Company
-        %p.font-light.text-gray-500.sm:text-lg.dark:text-gray-400
+        %p{class: "font-light text-gray-500 sm:text-lg"}
           Relevant for multiple users, extended
           \& premium support.
-        .flex.items-baseline.justify-center.my-8
-          %span.mr-2.text-5xl.font-extrabold $99
+        %div{class: "flex items-baseline justify-center.my-8"}
+          %span{clss: "mr-2 text-5xl font-extrabold"} $99
           %span.text-gray-500.dark:text-gray-400{"dark:text-gray-400" => ""} /month
         %ul.mb-8.space-y-4.text-left{:role => "list"}
           %li.flex.items-center.space-x-3
@@ -88,11 +87,11 @@
           started
       .flex.flex-col.max-w-lg.p-6.mx-auto.text-center.text-gray-900.bg-white.border.border-gray-100.rounded-lg.shadow.dark:border-gray-600.xl:p-8.dark:bg-gray-800.dark:text-white
         %h3.mb-4.text-2xl.font-semibold Enterprise
-        %p.font-light.text-gray-500.sm:text-lg.dark:text-gray-400
+        %p{class: "font-light text-gray-500 sm:text-lg"}
           Best for large scale uses and extended
           redistribution rights.
-        .flex.items-baseline.justify-center.my-8
-          %span.mr-2.text-5xl.font-extrabold $499
+        %div{class: "flex items-baseline justify-center.my-8"}
+          %span{clss: "mr-2 text-5xl font-extrabold"} $499
           %span.text-gray-500.dark:text-gray-400 /month
         %ul.mb-8.space-y-4.text-left{:role => "list"}
           %li.flex.items-center.space-x-3
