--- a/app/views/landing/_8_contacts.html.haml
+++ b/app/views/landing/_8_contacts.html.haml
@@ -41,7 +41,7 @@
                 %i{class: "fa-solid fa-xmark"}
 
 
-          .border-t-4.border-gray-200.mx-6.py-4
+          %div{class: "border-t-4 border-gray-200 mx-6 py-4"}
             %h3{class: "text-lg font-medium text-gray-900"}
               Контакти:
             %p{class: "mt-1 text-gray-600 text-2xl"}
