--- a/app/views/landing/index.html.haml
+++ b/app/views/landing/index.html.haml
@@ -3,26 +3,26 @@
 
 %div{class: "", id: ""}
   
-  %div{class: "wow", id: "hero-section-1"}
+  %div{class: "odd wow", id: "hero-section-1"}
     = render "1_hero_section"
   
-  %div{class: "wow mt-8", id: "services"}
+  %div{class: "even wow mt-8", id: "services"}
     = render "2_services"
 
-  %div{class: "wow mt-8", id: "hero-section-2"}
+  %div{class: "odd wow mt-8", id: "hero-section-2"}
     = render "3_hero_section"
   
   -#%div{class: "wow mt-8", id: "prices"}
   -#  = render "4_prices"
 
-  %div{class: "wow mt-8", id: "about"}
+  %div{class: "even wow mt-8", id: "about"}
     = render "5_about"
 
   -#%div{class: "wow mt-8", id: "reviews"}
   -#  = render "6_reviews"
 
-  %div{class: "wow mt-8", id: "faq"}
+  %div{class: "odd wow mt-8", id: "faq"}
     = render "7_faq"
   
-  %div{class: "wow mt-8", id: "contacts"}
+  %div{class: "even wow mt-8", id: "contacts"}
     = render "8_contacts"
