--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -13,12 +13,12 @@
             = image_tag("favicon.png", class: "rounded-t-xl w-full h-[150px] sm:h-[200px] transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0", alt: article.title)
           %div{class: "p-4 pt-2 h-auto md:h-70 lg:h-64 xl:h-56"}
             %div{class: "mb-8"}
-              %p.text-stone-900.font-bold.text-lg.mb-2.hover:text-red-500.inline-block
+              %p{class: "text-stone-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
                 = article.title
                 %i{class: "text-indigo-500 font-bold text-sm mb-2 inline-block"}
                   \#
                   = article.service.title
-              %p.text-stone-700.text-sm.text-ellipsis
+              %p{class: "text-stone-700 text-sm text-ellipsis"}
                 = article.description
           -#%div{class: "pe-2 pb-2 text-red-500 w-full flex justify-end items-end"}
           -#  %div{class: "pe-2 sm:pe-4 w-full sm:w-2/3 border-t-2 border-red-300 text-end"}
