--- a/app/views/landing/prices.html.haml
+++ b/app/views/landing/prices.html.haml
@@ -1,6 +1,6 @@
 %section{class: "mt-8 font-messiri max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex flex-col justify-between"}
   %div{class: "text-center"}
-    %h2{class: "text-3xl text-red-500 sm:text-4xl leading-normal font-extrabold tracking-tight"}
+    %h1{class: "text-3xl text-red-500 sm:text-4xl leading-normal font-extrabold tracking-tight"}
       Наші ціни
 
   %div{class: "relative overflow-x-auto shadow-md sm:rounded-lg my-10"}
@@ -17,7 +17,10 @@
             %th{class: "px-6 py-4 font-medium text-stone-900 whitespace-nowrap", scope: "row"}
               = repair.title
             %td{class: "px-6 py-4 text-center"}
-              = repair.price
+              від
+              %span{class: "text-stone-900"}
+                = repair.price
+              грн.
 
   %div{class: "relative overflow-x-auto shadow-md sm:rounded-lg my-10"}
     %table{class: "w-full text-md text-left rtl:text-right text-stone-500"}
@@ -33,4 +36,7 @@
             %th{class: "px-6 py-4 font-medium text-stone-900 whitespace-nowrap", scope: "row"}
               = sewing.title
             %td{class: "px-6 py-4 text-center"}
-              = sewing.price
+              від
+              %span{class: "text-stone-900"}
+                = sewing.price
+              грн.
