--- a/app/views/message_notifier_mailer/new_message_email.html.haml
+++ b/app/views/message_notifier_mailer/new_message_email.html.haml
@@ -4,14 +4,15 @@
       Нове повідомлення
     %div{class: "bg-white rounded-lg shadow-md border p-4"}
       %div{class: "flex items-center mb-4"}
-        = image_tag("favicon.png", class: "w-12 h-12 rounded-full mr-3", alt: "mail image")
+        = image_tag image_url("favicon.png"), class: "w-12 h-12 rounded-full mr-3", alt: "mail image")
         %div
           %h2{class: "text-lg font-semibold"}
             = @landing_message.name
-          %p{class: "text-gray-500 text-sm"}
+          %p{class: "text-gray-500 text-xl"}
             = @landing_message.email
+          %p{class: "text-gray-500 text-xl"}
             = @landing_message.phone
       %p{class: "text-gray-700 mb-4"}
         = @landing_message.message
       %div{class: "flex justify-end"}
-        %a{clas: "text-blue-500.font-semibold", href: admin_messages_path} Перейти
+        %a{class: "text-blue-500.font-semibold", href: "https://druzhba.biz.ua/admin", target: "blank"} Перейти
