--- a/app/views/services/show.html.haml
+++ b/app/views/services/show.html.haml
@@ -6,23 +6,24 @@
           %div{class: "bg-cover bg-center text-center overflow-hidden", style: "min-height: 450px; background-image: url('#{url_for(@service.image)}')", title: @service.title}
         - else
           %div{class: "bg-cover bg-center text-center overflow-hidden", style: "min-height: 450px; background-image: url('#{asset_path("favicon.png")}')", title: @service.title}
-        .max-w-3xl.mx-auto.mb-8
-          .mt-3.bg-white.rounded-b.lg:rounded-b-none.lg:rounded-r.flex.flex-col.justify-between.leading-normal
-            .bg-white.relative.top-0.-mt-32.p-5.sm:p-10
-              %h1.text-gray-900.font-bold.text-3xl.mb-2
+        %div{class: "max-w-3xl mx-auto mb-8"}
+          %div{class: "mt-3 bg-white rounded-b lg:rounded-b-none lg:rounded-r flex flex-col justify-between leading-normal"}
+            %div{class: "bg-white relative top-0 -mt-32 p-5 sm:p-10"}
+              %h1{class: "text-gray-900 font-bold text-3xl mb-2"}
                 = @service.title
-              %blockquote.text-base.leading-8.my-5.text-stone-700.mb-4.text-2xl.border-s-4.border-stone-300.p-4.shadow-md
+              %blockquote{class: "text-base leading-8 my-5 text-stone-700 mb-4 text-2xl border-s-4 border-stone-300 p-4 shadow-md"}
                 = @service.description
-              %p.text-base.leading-8.my-5
+              %p{class: "text-base leading-8 my-5"}
                 = @service.body
 
     %div{class: "px-4"}
       %div{class: "bg-stone-100 px-4 py-6 rounded"}
-        %h3.text-lg.font-bold.mb-2 Наші роботи:
-        %ul.list-outside
+        %h3{class: "text-lg font-bold mb-2"} 
+          Наші роботи:
+        %ul{class: "list-outside"}
           - @service.articles.each do |article|
             - if article.present? && article.published?
-              %li.mb-2.text-justify
+              %li{class: "mb-2 text-justify"}
                 %i{class: "me-2 text-sm fa-solid fa-feather text-red-500"}
                 = link_to article.title, article_path(article), class: "text-xl hover:border-b-2 hover:border-red-500 text-stone-500 hover:text-stone-900"
             - else
