--- a/app/views/landing/_2_services.html.haml
+++ b/app/views/landing/_2_services.html.haml
@@ -13,7 +13,7 @@
                 Заміна замків у верхньому та легкому одягу
               %p{class: "mx-auto text-base leading-relaxed text-red-500"}
                 від 150 грн
-              %p{class: "mx-auto text-base leading-relaxed text-stone-500"}
+              %p{class: "text-justify mx-auto text-base leading-relaxed text-stone-500"}
                 Це важливий етап у догляді за вашим одягом.
                 Час від часу може знадобитися заміна зламаного або пошкодженого замка,
                 щоб ваш одяг виглядав на висоті. Це досить складний та трудомісткий процес,
@@ -27,7 +27,7 @@
                 Штуковка (штопка) джинсових виробів
               %p{class: "mx-auto text-base leading-relaxed text-red-500"}
                 від 150 грн
-              %p{class: "mx-auto text-base leading-relaxed text-stone-500"}
+              %p{class: "text-justify mx-auto text-base leading-relaxed text-stone-500"}
                 Це процес відновлення пошкоджених або протертих місць на джинсових речах.
                 Зазвичай це виконується шляхом закладання строчок чи патчів на пошкоджені ділянки,
                 що дозволяє джинсам виглядати як новими.
@@ -42,7 +42,7 @@
                 Ремонт шкіряних та хутрових виробів
               %p{class: "mx-auto text-base leading-relaxed text-red-500"}
                 від 200 грн              
-              %p{class: "mx-auto text-base leading-relaxed text-stone-500"}
+              %p{class: "text-justify mx-auto text-base leading-relaxed text-stone-500"}
                 Дуже важлива процедура, яка зберігає якість та тривалість таких речей.
                 Під час ремонту фахівці здійснюють реставрацію пошкоджень,
                 змінюють застарілі деталі та повертають виробам першісний вигляд.
@@ -58,7 +58,7 @@
                 Підгін низу
               %p{class: "mx-auto text-base leading-relaxed text-red-500"}
                 від 150 грн              
-              %p{class: "mx-auto text-base leading-relaxed text-stone-500"}
+              %p{class: "text-justify mx-auto text-base leading-relaxed text-stone-500"}
                 Це процес корекції довжини джинсів,
                 суконь, пальт та інших речей знизу.
                 Цей вид ремонту є дуже популярним серед людей,
@@ -74,7 +74,7 @@
                 Дрібний ремонт одягу
               %p{class: "mx-auto text-base leading-relaxed text-red-500"}
                 від 50 грн              
-              %p{class: "mx-auto text-base leading-relaxed text-stone-500"}
+              %p{class: "text-justify mx-auto text-base leading-relaxed text-stone-500"}
                 Ця послуга дозволяє виправляти маленькі пошкодження на вашому одязі.
                 Це може бути зашивання ґудзиків, закріплення швів або зашивання дирок.
                 Підтримуючи одяг у належному стані, ви економите час і гроші на пошитті нового одягу,
@@ -89,7 +89,7 @@
                 Підшивання штор
               %p{class: "mx-auto text-base leading-relaxed text-red-500"}
                 від 200 грн              
-              %p{class: "mx-auto text-base leading-relaxed text-stone-500"}
+              %p{class: "text-justify mx-auto text-base leading-relaxed text-stone-500"}
                 Ця процедура допомагає створити естетичний вигляд приміщення,
                 а також підвищити функціональність штор,
                 дозволяючи їм краще захищати від сонячних променів або забезпечувати приватність.
