--- a/app/views/services/index.html.haml
+++ b/app/views/services/index.html.haml
@@ -6,12 +6,12 @@
   %div{class: "grid grid-cols-1 md:grid-cols-3 sm:grid-cols-2 xl:grid-cols-4 lg:grid-cols-4 gap-10"}
     - @services.each do |service|
       %a{class: "rounded-xl shadow-lg hover:shadow-lg hover:shadow-red-300", href: service_path(service)}
-        %div{class: "row"}
+        %div{class: "row text-justify"}
           - if service.image.attached?
             = image_tag(service.image, class: "rounded-t-xl w-full h-[150px] sm:w-full sm:h-[200px] transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0", alt: service.title)
           - else
             = image_tag("favicon.png", class: "rounded-t-xl w-full h-[150px] sm:h-[200px] transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0", alt: service.title)
-          %div{class: "p-4 pt-2 h-auto md:h-70 lg:h-64 xl:h-56"}
+          %div{class: "p-4 pt-2 h-auto md:h-70 lg:h-64 xl:h-60"}
             %div{class: "mb-8"}
               %p.text-gray-900.font-bold.text-lg.mb-2.hover:text-red-500.inline-block
                 = service.title
