--- a/app/views/shared/_5_about.html.haml
+++ b/app/views/shared/_5_about.html.haml
@@ -13,7 +13,7 @@
           %div{class: "relative"}
             %dt
               %div{class: "absolute flex items-center justify-center h-12 w-12 rounded-md bg-primary-500 text-white"}
-                = image_tag "mashine.svg"
+                = image_tag "mashine.svg", alt: "Нове сучасне обладнання"
               %p{class: "font-heading ml-16 text-lg leading-6 font-bold text-gray-700"}
                 Нове сучасне обладнання
             %dd{class: "mt-2 ml-16 text-base text-gray-500 text-justify"}
@@ -25,7 +25,7 @@
           %div{class: "relative"}
             %dt
               %div{class: "absolute flex items-center justify-center h-12 w-12 rounded-md bg-primary-500 text-white"}
-                = image_tag "button.svg"
+                = image_tag "button.svg", alt: "Дипломовані майстри"
               %p{class: "font-heading ml-16 text-lg leading-6 font-bold text-gray-700"}
                 Дипломовані майстри
             %dd{class: "mt-2 ml-16 text-base text-gray-500 text-justify"}
@@ -37,7 +37,7 @@
           %div{class: "relative"}
             %dt
               %div{class: "absolute flex items-center justify-center h-12 w-12 rounded-md bg-primary-500 text-white"}
-                = image_tag "model.svg"
+                = image_tag "model.svg", alt: "Гнучкі ціни"
               %p{class: "font-heading ml-16 text-lg leading-6 font-bold text-gray-700"}
                 Гнучкі ціни
             %dd{class: "mt-2 ml-16 text-base text-gray-500 text-justify"}
@@ -49,7 +49,7 @@
           %div{class: "relative"}
             %dt
               %div{class: "absolute flex items-center justify-center h-12 w-12 rounded-md bg-primary-500 text-white"}
-                = image_tag "spool.svg"
+                = image_tag "spool.svg", alt: "Гарантія якості"
               %p{class: "font-heading ml-16 text-lg leading-6 font-bold text-gray-700"}
                 Гарантія якості
             %dd{class: "mt-2 ml-16 text-base text-gray-500 text-justify"}
