--- a/app/views/shared/_6_reviews.html.haml
+++ b/app/views/shared/_6_reviews.html.haml
@@ -1,7 +1,7 @@
 %section{class: "container font-messiri mx-auto px-4 space-y-6 bg-stone-100 py-8 md:py-10 lg:py-14"}
   %div{class: "container mx-auto px-8 lg:flex"}
     %div{class: "text-center lg:text-left lg:w-1/2"}
-      %h1{class: "text-4xl lg:text-5xl xl:text-6xl font-bold leading-none"}Main title of your landing page</h1>
+      %h2{class: "text-4xl lg:text-5xl xl:text-6xl font-bold leading-none"}Main title of your landing page
       %p{class: "text-xl lg:text-2xl mt-6 font-light"} Free landing page template to promote your business startup and generate leads for the offered services
       %p{class: "mt-8 md:mt-12"}
         %button{type: "button", class: "py-4 px-12 bg-teal-500 hover:bg-teal-600 rounded text-white"}Get Started
