--- a/app/views/admin/services/_form.html.haml
+++ b/app/views/admin/services/_form.html.haml
@@ -2,6 +2,8 @@
   .list-group-item
     = render Admin::FieldsetComponent.new(form, :title, :text, required: true)
   .list-group-item
+    = render Admin::FieldsetComponent.new(form, :subtitle, :text, required: true)
+  .list-group-item
     = render Admin::FieldsetComponent.new(form, :svc, :radio, required: true, list: Admin::Service.svcs_i18n.invert)
   .list-group-item
     = render Admin::FieldsetComponent.new(form, :price, :text, required: true)
