--- a/app/views/landing/index.html.haml
+++ b/app/views/landing/index.html.haml
@@ -4,25 +4,25 @@
 %div{class: "", id: ""}
   
   %div{class: "odd wow", id: "hero-section-1"}
-    = render "1_hero_section"
+    = render "shared/1_hero_section"
   
   %div{class: "even wow mt-8", id: "services"}
-    = render "2_services"
+    = render "shared/2_services"
 
   %div{class: "odd wow mt-8", id: "hero-section-2"}
-    = render "3_hero_section"
+    = render "shared/3_hero_section"
   
   -#%div{class: "wow mt-8", id: "prices"}
-  -#  = render "4_prices"
+  -#  = render "shared/4_prices"
 
   %div{class: "even wow mt-8", id: "about"}
-    = render "5_about"
+    = render "shared/5_about"
 
   -#%div{class: "wow mt-8", id: "reviews"}
-  -#  = render "6_reviews"
+  -#  = render "shared/6_reviews"
 
   %div{class: "odd wow mt-8", id: "faq"}
-    = render "7_faq"
+    = render "shared/7_faq"
   
   %div{class: "even wow mt-8", id: "contacts"}
-    = render "8_contacts"
+    = render "shared/8_contacts"
