--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,15 +5,23 @@
     %script{async: "true", "data-turbo-track": "reload", src: "https://www.googletagmanager.com/gtag/js?id=G-B1HN94WVHN"}
 
     %title
-      = @page_title.present? ? "Швейна майстерня ☞ ДРУЖБА ☜ - #{@page_title}" : "Швейна майстерня ☞ ДРУЖБА ☜"
+      = @page_title.present? ? "Швейна майстерня ☞ДРУЖБА☜ - #{@page_title}" : "Швейна майстерня ☞ ДРУЖБА ☜"
     = favicon_link_tag asset_path('favicon.png')
-    %meta{content: "width=device-width, initial-scale=1.0", name: "viewport"}
     %meta{content: "text/html; charset=UTF-8", "http-equiv": "Content-Type"}
-    %meta{content: "ремонт одягу пошив індивідуальний пошив ремонт одежды укоротить брюки штаны юбка платье", :name => "description"}
+    %meta{name: "viewport", content: "width=device-width, initial-scale=1.0"}
+    %meta{name: "description", content: "Швейна майстерня ☞ ДРУЖБА ☜ у Кривому Розі. Шукаєте ідеальний ремонт одягу? Ми пропонуємо якісний ремонт та ексклюзивне пошиття одягу. Довіртеся майстрам!"}
+    %meta{name: "revisit-after", content: "1 days"}
+
+    = csrf_meta_tags
+    = csp_meta_tag
+    = stylesheet_link_tag "application", "inter-font", "data-turbo-track": "reload"
+    = stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload"
+    = javascript_include_tag 'application', 'data-turbo-track': 'reload', defer: true
 
     -# FlowbiteJS
     %link{href: "https://unpkg.com/flowbite@1.5.3/dist/flowbite.min.css", rel: "stylesheet"}
     %script{:src => "https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"}
+    
     -# AnimatedCSS and WOWjs
     %link{href: "https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css", rel: "stylesheet"}
     %script{crossorigin: "anonymous", integrity: "sha512-Eak/29OTpb36LLo2r47IpVzPBLXnAMPAVypbSZiZ4Qkf8p/7S/XRG5xp7OKWPPYfJT6metI+IORkR5G8F900+g==", referrerpolicy: "no-referrer", src: "https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"}
@@ -29,12 +37,6 @@
           href: "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css",
           integrity: "sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==",
           rel: "stylesheet"}
-
-    = csrf_meta_tags
-    = csp_meta_tag
-    = stylesheet_link_tag "application", "inter-font", "data-turbo-track": "reload"
-    = stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload"
-    = javascript_include_tag 'application', 'data-turbo-track': 'reload', defer: true
 
   %body{class: "bg-stone-100", id: "main", "data-controller": "landing--index"}
     %navigation{class: ""}
