--- a/app/views/shared/_2_services.html.haml
+++ b/app/views/shared/_2_services.html.haml
@@ -1,6 +1,6 @@
 %section{class: "font-messiri bg-white relative items-center w-full px-5 py-12 mx-auto md:px-12 lg:px-24 max-w-7xl"}
   %div{class: "py-3 sm:py-6"}
-    %h1{class: "text-3xl uppercase font-messiri text-center font-bold tracking-tight font-medium text-red-500"}
+    %2{class: "text-3xl uppercase font-messiri text-center font-bold tracking-tight font-medium text-red-500"}
       Наші послуги на ремонт одягу
   %div{class: "mx-auto p-5 sm:p-10 md:p-16 lg:p-4 xl:p-2"}
     %div{class: "grid grid-cols-1 md:grid-cols-3 sm:grid-cols-2 xs:grid-cols-1 xl:grid-cols-3 gap-5"}
