--- a/app/views/shared/_7_faq.html.haml
+++ b/app/views/shared/_7_faq.html.haml
@@ -1,9 +1,9 @@
 %section{class: "font-messiri bg-white max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex flex-col justify-between"}
-  %div{class: "text-center"}
-    %p{class: "mt-4 text-sm leading-7 text-stone-500 font-regular"}
+  %h2{class: "text-center"}
+    %div{class: "mt-4 text-sm leading-7 text-stone-500 font-regular"}
       %span{class: "hover:text-stone-900 hover:border-b-2 hover:border-red-500"}
         = link_to "F.A.Q", faq_path
-    %h3{class: "text-3xl sm:text-4xl leading-normal font-extrabold tracking-tight text-stone-900"}
+    %div{class: "text-3xl sm:text-4xl leading-normal font-extrabold tracking-tight text-stone-900"}
       Ваші найчастіші
       %span{class: "hover:text-stone-900 hover:underline hover:underline-offset-4"}
         = link_to "питання", faq_path
